# ais_seqmaker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/: ais.hpp  argparse.hpp  function_traits.hpp  io.hpp  mmsi_counter.hpp  seq.hpp  seq_counter.hpp  seq_diff.hpp  seq_maker.hpp  sequencer.hpp  utility.hpp
src/: CMakeLists.txt  ais.cpp  mmsi_counter.cpp  seq.cpp  seq_counter.cpp  seq_diff.cpp  seq_maker.cpp  seqdiff.cxx  seqmaker.cxx  sequencer.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
